<resources>
    <string name="app_name">Bean&amp;Leaf</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">Not registered or This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="register_as_merchant">Register as Merchant</string>
    <string name="register_as_user">Register as User</string>
    <string name="username">Username</string>
    <string name="enter_username">Enter Username</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="register">Register</string>
    <string name="enter_business">Enter Business Code</string>
    <string name="enter_info">Please fill out information about your shop!</string>
    <string name="enter_restaurant_name">Name of your shop</string>
    <string name="caffeineWarning">Warning: exceeded daily caffeine intake</string>
</resources>
