<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/welcome_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text = "Welcome! "/>


    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Look for shops"
        android:onClick="OpenMap"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text = "Create Business"
        android:id="@+id/create_business_button"
        android:onClick="AddBusinessActivity">

    </Button>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Log out"
        android:onClick="BackToLoginActivity"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text = "Purchase History: \n"
        android:id = "@+id/purchase_history"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text = "Selling History\n"
        android:id="@+id/selling_history"/>

</LinearLayout>