...
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_email" />

        <EditText
            android:id="@+id/login_email"
            android:layout_width="185dp"
            android:layout_height="wrap_content"
            android:inputType="text" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_password" />

        <EditText
            android:id="@+id/login_password"
            android:layout_width="185dp"
            android:layout_height="wrap_content"
            android:inputType="text" />

        <Button
            android:layout_width="wrap_content"
...
